# adapter-kustomize-build

./: .gitignore  CLAUDE.md  MAPPING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/aieos_adapter_kustomize_build/: __init__.py
tests/: test_adapter.py
