[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aieos-adapter-kustomize-build"
version = "1.0.0"
description = "AIEOS adapter: publish.manifest via kustomize + git-commit"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Todd Linnertz" }]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
